# StressMethodsLib

./: README.md  activate.ps1  pyproject.toml  run.py  test.html  test_file.py
SML.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
SML/methods/FastenerCalculation/: body.py
SML/methods/Mises_v1/: body.py  formulas.md  manual.md  validator.py
SML/utils/: FormulaLogger.py  Logger.py  Validator.py
SML/utils/Validator/: Exceptions.py  Validator.py
tests/resources/Mises_v1_test/: Mises_v1.json  calculation_log.html  inputData.csv  loadCases.csv  log.txt  log.txt.txt  safetyFactors.csv
tests/resources/Mises_v1_test/FE_results/: v1_106_User_C1.csv  v1_107_User_C2.csv  v1_108_User_C3.csv  v1_109_User_C4.csv  v1_110_User_C5.csv  v1_111_User_C6.csv  v1_112_User_C7.csv  v1_113_User_C8.csv  v1_114_User_C9.csv  v1_115_User_C10.csv  v1_116_User_C11.csv  v1_117_User_C12.csv  v1_118_User_C13.csv  v1_119_User_C14.csv  v1_120_User_C15.csv  v1_121_User_C16.csv  v1_122_User_C17.csv  v1_123_User_C18.csv  v1_124_User_C19.csv  v1_125_User_C20.csv  v1_126_User_C21.csv  v1_127_User_C22.csv  v1_128_User_C23.csv  v1_129_User_C24.csv  v1_130_User_P1.csv  v1_131_User_P2.csv  v1_132_User_P3.csv  v1_133_User_P4.csv  v1_134_User_P5.csv  v1_135_User_P6.csv  v1_136_User_P7.csv  v1_137_User_P8.csv  v1_138_User_P9.csv  v1_139_User_P10.csv  v1_140_User_P11.csv  v1_141_User_P12.csv  v1_142_User_P13.csv  v1_143_User_P14.csv  v1_144_User_P15.csv  v1_145_User_P16.csv  (+13 more)
