[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SML"
version = "0.0.1"
description = "Библиотека методик для расчетов прочности"
dependencies = [
    "numpy >= 1.23",
    "pandas ~= 2.0",
    "mdtex2html >= 1.3.1"
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["SML"]
